--- a/_layouts/board-layout.html
+++ b/_layouts/board-layout.html
@@ -3,6 +3,25 @@ layout: page
 sitemap: false
 ---
 <div class="board">
+    <div class="board-title-wrapper">
+        <div class="board-title">
+            <div class="sk-circle">
+                <div class="sk-circle1 sk-child"></div>
+                <div class="sk-circle2 sk-child"></div>
+                <div class="sk-circle3 sk-child"></div>
+                <div class="sk-circle4 sk-child"></div>
+                <div class="sk-circle5 sk-child"></div>
+                <div class="sk-circle6 sk-child"></div>
+                <div class="sk-circle7 sk-child"></div>
+                <div class="sk-circle8 sk-child"></div>
+                <div class="sk-circle9 sk-child"></div>
+                <div class="sk-circle10 sk-child"></div>
+                <div class="sk-circle11 sk-child"></div>
+                <div class="sk-circle12 sk-child"></div>
+            </div>
+        </div>
+        <hr>
+    </div>
     <div class="wrapper">
         <div class="tiles">
             <div class="sk-circle">
