--- a/_sass/miscellaneous/_boards.scss
+++ b/_sass/miscellaneous/_boards.scss
@@ -29,7 +29,7 @@
 // Loading animation
 
 .sk-circle {
-    margin: 100px auto;
+    margin: 3vh auto;
     width: 40px;
     height: 40px;
     position: relative;
