--- a/_sass/miscellaneous/_customer.scss
+++ b/_sass/miscellaneous/_customer.scss
@@ -1,9 +1,29 @@
 .board {
     height: auto;
     width: 100%;
-    padding: 20vh 10vh 15vh 10vh;
-    background: $prolikeblue;
-    font-family: 'Bebas Neue';
+    padding: 10vh 20vh 10vh 20vh;
+    background: #1A2236;
+
+    .board-title-wrapper {
+    padding: 5vh 0 7.5vh 0;
+    .sk-circle {
+        margin: 3vh;
+     }
+
+    h1 {
+        font-size: 4vh;
+        color: white;
+        font-family: 'Bebas Neue', cursive;
+        margin: 0;
+        margin-bottom: 2.5vh;
+        }
+        hr {
+            width: 100%;
+            height: 1.5px;
+            background: rgba(107,125,153,0.15);
+            margin: 0;
+        }
+    }
 
 
     .wrapper {
@@ -12,11 +32,14 @@
 
         .summed-tile {
             display: grid;
+            place-content: center;
+            place-items: center;
             background-color: whitesmoke;
             grid-template-columns: 1fr;
+            height: 45vh;
     
             h2 {
-                font-size: 10em;
+                font-size: 8em;
                 color: $prolikeyellow;
                 font-weight: bold;
                 line-height: 1;
@@ -34,6 +57,90 @@
         }
     }
 }
+
+.lds-roller {
+    display: inline-block;
+    position: relative;
+  }
+  .lds-roller div {
+    animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+    transform-origin: 40px 40px;
+  }
+  .lds-roller div:after {
+    content: " ";
+    display: block;
+    position: absolute;
+    width: 7px;
+    height: 7px;
+    border-radius: 50%;
+    background: #fff;
+    margin: -4px 0 0 -4px;
+  }
+  .lds-roller div:nth-child(1) {
+    animation-delay: -0.036s;
+  }
+  .lds-roller div:nth-child(1):after {
+    top: 63px;
+    left: 63px;
+  }
+  .lds-roller div:nth-child(2) {
+    animation-delay: -0.072s;
+  }
+  .lds-roller div:nth-child(2):after {
+    top: 68px;
+    left: 56px;
+  }
+  .lds-roller div:nth-child(3) {
+    animation-delay: -0.108s;
+  }
+  .lds-roller div:nth-child(3):after {
+    top: 71px;
+    left: 48px;
+  }
+  .lds-roller div:nth-child(4) {
+    animation-delay: -0.144s;
+  }
+  .lds-roller div:nth-child(4):after {
+    top: 72px;
+    left: 40px;
+  }
+  .lds-roller div:nth-child(5) {
+    animation-delay: -0.18s;
+  }
+  .lds-roller div:nth-child(5):after {
+    top: 71px;
+    left: 32px;
+  }
+  .lds-roller div:nth-child(6) {
+    animation-delay: -0.216s;
+  }
+  .lds-roller div:nth-child(6):after {
+    top: 68px;
+    left: 24px;
+  }
+  .lds-roller div:nth-child(7) {
+    animation-delay: -0.252s;
+  }
+  .lds-roller div:nth-child(7):after {
+    top: 63px;
+    left: 17px;
+  }
+  .lds-roller div:nth-child(8) {
+    animation-delay: -0.288s;
+  }
+  .lds-roller div:nth-child(8):after {
+    top: 56px;
+    left: 12px;
+  }
+  @keyframes lds-roller {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+  
 
 /* .projects {
     background-color: whitesmoke;
