Make animations the right height

--- a/_sass/miscellaneous/_customer.scss
+++ b/_sass/miscellaneous/_customer.scss
@@ -7,7 +7,9 @@
     .board-title-wrapper {
     padding: 5vh 0 7.5vh 0;
     .sk-circle {
-        margin: 3vh;
+        margin: 11px 3vh;
+        width: 40px;
+        height: 40px;
      }
 
     h1 {
