--- a/_sass/miscellaneous/_boards.scss
+++ b/_sass/miscellaneous/_boards.scss
@@ -29,9 +29,9 @@
 // Loading animation
 
 .sk-circle {
-    margin: 3vh auto;
+    margin: 171px auto;
     width: 40px;
-    height: 40px;
+    height: 43px;
     position: relative;
   }
   .sk-circle .sk-child {
