--- a/_layouts/services-post.html
+++ b/_layouts/services-post.html
@@ -14,7 +14,7 @@ layout: page
                     <h2>{{ page.title }}</h2>
                 </div>
 
-                <div class="col-12">
+                <div class="col-12" data-proofer-ignore>
                     {{ page.content | markdownify }}
                 </div>
 
