close #498 define pipelines i configuration file

--- a/_layouts/board-layout.html
+++ b/_layouts/board-layout.html
@@ -23,7 +23,23 @@ sitemap: false
         <hr>
     </div>
     <div class="wrapper">
-        <div class="tiles">
+        <div class="sp-left">
+            <div class="sk-circle">
+                <div class="sk-circle1 sk-child"></div>
+                <div class="sk-circle2 sk-child"></div>
+                <div class="sk-circle3 sk-child"></div>
+                <div class="sk-circle4 sk-child"></div>
+                <div class="sk-circle5 sk-child"></div>
+                <div class="sk-circle6 sk-child"></div>
+                <div class="sk-circle7 sk-child"></div>
+                <div class="sk-circle8 sk-child"></div>
+                <div class="sk-circle9 sk-child"></div>
+                <div class="sk-circle10 sk-child"></div>
+                <div class="sk-circle11 sk-child"></div>
+                <div class="sk-circle12 sk-child"></div>
+            </div>
+        </div>
+        <div class="sp-sofar">
             <div class="sk-circle">
                 <div class="sk-circle1 sk-child"></div>
                 <div class="sk-circle2 sk-child"></div>
@@ -42,7 +58,7 @@ sitemap: false
     </div>
 </div>
 
-<div class="est"></div>
+
 
 
 
