--- a/_sass/miscellaneous/_customer.scss
+++ b/_sass/miscellaneous/_customer.scss
@@ -31,6 +31,7 @@
     .wrapper {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
+        grid-column-gap: 5vh;
 
         .summed-tile {
             display: grid;
@@ -143,263 +144,28 @@
     }
   }
   
+ 
 
-/* .projects {
-    background-color: whitesmoke;
-    padding: 50px 0;
+  @media (max-width: 1500px) {
 
-    .project-status {
-        min-height: 350px !important;
-        padding: 0 !important;
-    }
+    .board {
+        
+        h1 {
+            font-size: 5em;
 
-    .project-status-box {
-        color: white;
-        background-color: $prolikeblue;
-        margin: -15px 0 0 -15px;
-        padding: 30px 0 15px 30px;
-        z-index: 100;
-
-
-    }
-
-    .status-text {
-        padding: 2vh;
-    }
-
-    pre {
-        max-width: 100px;
-    }
-
-}
-
-.project {
-
-    margin-top: 75px;
-    margin-bottom: 20px;
-
-
-    .container {
-
-        width: 75%;
-
-    }
-
-    a {
-        color: black;
-        text-decoration: none;
-        font-weight: 500;
-    }
-
-    p {
-        margin-top: 4px;
-        margin-bottom: 4px;
-    }
-
-    .row>* {
-        padding: 15px !important;
-    }
-
-    .col-12 {
-        height: 300px;
-        padding: 15px;
-        box-shadow: 0px 3px 11px -2px rgba(0,0,0,0.75);
-        overflow-y: auto;
-    }
-
-    @media (max-width: 768px) {
-        .container {
-            width: 100% !important;
+        }
+        .wrapper {
+            grid-template-columns: 1fr 1fr;
         }
     }
+  }
 
-    .box-title {
-        font-weight: bold;
-        font-size: 20px;
-    }
+  @media (max-width: 768px) {
 
-
-    // message board
-
-    // profile
-
-    .profile {
-        align-content: center;
-        text-align: center;
-        padding: 0px;
-
-
-        .col-lg-10 {
-            padding: 0px !important;
-        }
-
-        .profile p {
-            line-height: 5px;
-        }
-
-
-        .profile-picture {
-            width: 50%;
-            height: auto;
-            border-radius: 50%;
-        }
-
-        @media (max-width: 768px) {
-            .profile-picture{
-              height: 90% !important;
-              width: auto;
-            }
-
-            .profile-img-box {
-                height: 130px;
-                width: auto;
-            }
-          }
-
-    }
-
-    // last opened issue
-
-    .newIssue {
-
-        .ni-number {
-            font-weight: bold;
-            color: #8fd0a0;
-        }
-
-    }
-
-    // last closed issue
-
-    .closedIssue {
-
-        .ci-number {
-            font-weight: bold;
-            color: #e59198;
-        }
-
-    }
-
-    // ni & ci links
-
-    .down {
-
-        position: absolute;
-        bottom: 10px;
-        left: 15px;
-
-    }
-
-    // zenhub
-
-    .zenhub {
-        background-color: #5b5db5;
-        text-align: center;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-
-        .box-title {
-            font-size: 35px;
-        }
-
-        p,
-        a {
-            color: white;
-            align-content: center;
-        }
-
-        a:hover {
-            text-decoration: none;
-            color: white;
-        }
-
-
-    }
-
-    // to do list & pipeline
-
-    .todo-list>*,
-    .pipeline-box>*,
-    .contributer-box {
-        padding-top: 3px;
-        padding-bottom: 3px;
-        vertical-align: middle;
-        border-top: 1px solid #00000063;
-    }
-
-    .todo-list>*:last-child,
-    .pipeline-box>*:last-child,
-    .contributer-box:last-child {
-        border-bottom: 1px solid #00000063;
-    }
-
-    .issue-number,
-    .issue-name,
-    .todo-list {
-        font-weight: bold;
-    }
-
-    // storypoints 
-
-    .storypoints {
-        text-align: center;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        background-color: $prolikeblue;
-
-        h3 {
-            font-size: 10em;
-            color: $prolikeyellow;
-            font-weight: bold;
-            line-height: 1;
-        }
-
-        p {
-            font-weight: bold;
-            font-size: 2em;
-            color: white;
-        }
-
-        p.subtext {
-            font-size: 12px;
+    .board {
+        padding: 15vh 2vh 10vh 2vh;
+        .wrapper {
+            grid-template-columns: 1fr;
         }
     }
-
-    // contributors
-
-    .contributors {
-
-
-        h3 {
-            display: inline;
-            padding-left: 5px;
-        }
-
-        img {
-            width: auto;
-            height: 4vh;
-        }
-
-        .contributer-box {
-            padding-bottom: 5px;
-        }
-    }
-
-}
-.card {
-    border: 0;
-    border-radius: 0;
-    .card-header {
-        background-color: #4d4d4d;
-        border-radius: 0;
-        border: 0;
-        .status-link {
-            border: 0;
-            background-color: transparent;
-            color: white;
-        }
-    }
-    
-} */
+  }
