close #503 quick padding fix on frontpage

--- a/_sass/pages/_dillyDally.scss
+++ b/_sass/pages/_dillyDally.scss
@@ -59,6 +59,9 @@
     .btn {
         width: 50%;
         margin-top: 5vh;
+        &:hover {
+            background: $prolikeyellow;
+        }
     }
 
     span {
