close #466 make anything responsive

--- a/_sass/pages/_anything.scss
+++ b/_sass/pages/_anything.scss
@@ -80,9 +80,69 @@
     }
 }
 
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+
+@media only screen and (max-width: 1500px) {
+
+    .posts-container {
+
+        .wrapper {
+            grid-template-columns: 1fr 1fr 1fr;
+        }
+
+        .events-image {
+            height: 30vh;
+        }
+    }
+}
+
 /* Small devices (phones, 768px and down) */
 
 @media only screen and (max-width: 768px) {
+
+    .posts-container {
+        padding: 15vh 2vh 10vh 2vh;
+
+        .anything-overview h1 {
+            font-size: 35px;
+        }
+
+        .wrapper {
+            grid-template-columns: 1fr 1fr;
+        }
+
+        .card-img-top {
+            height: 35vh;
+        }
+
+        .card-body {
+            padding: 10px 0;
+
+            h5 {
+                font-size: 25px;
+                line-height: 35px;
+                padding: 5px 0;
+            }
+
+            p {
+                font-size: 14px;
+            }
+
+            .tags {
+                font-size: 15px;
+
+                p {
+                    max-width: 100%;
+                }
+
+            }
+        }
+    }
+}
+
+/* Small devices (phones, 768px and down) */
+
+@media only screen and (max-width: 468px) {
 
     .posts-container {
         padding: 15vh 2vh 10vh 2vh;
@@ -120,38 +180,6 @@
                 }
 
             }
-        }
-    }
-}
-
-/* Extra large devices (large laptops and desktops, 1200px and up) */
-
-@media only screen and (max-width: 1200px) {
-
-    .posts-container {
-
-        .wrapper {
-            grid-template-columns: 1fr 1fr;
-        }
-
-        .events-image {
-            height: 30vh;
-        }
-    }
-}
-
-/* Extra large devices (large laptops and desktops, 1200px and up) */
-
-@media only screen and (max-width: 1500px) {
-
-    .posts-container {
-
-        .wrapper {
-            grid-template-columns: 1fr 1fr 1fr;
-        }
-
-        .events-image {
-            height: 30vh;
         }
     }
 }
