--- a/_includes/components/footer.html
+++ b/_includes/components/footer.html
@@ -29,7 +29,7 @@
       <li><a href="{{ page.url }}" data-proofer-ignore>{{ page.title }}</a></li>
       {% endif %}
       {% endfor %}
-      <li><a href="#" data-proofer-ignore>Partners</a></li>
+      <!-- <li><a href="#" data-proofer-ignore>Partners</a></li> -->
     </span>
   </div>
 
