--- a/_layouts/DillyDally.html
+++ b/_layouts/DillyDally.html
@@ -41,10 +41,10 @@ layout: page
                 </div>
             </div>
 
-            <div class="col-lg-7 col-12" id="timereg_form_part2a">
-                <div id="relatedToGithubIssue">
+            <div class="col-12" id="timereg_form_part2a">
+                <div id="relatedToGithubIssue" class="row justify-content-center">
 
-                    <div class="col-lg-12 col-12">
+                    <div class="col-lg-7 col-12">
                         <select name="githubRepo" required>
                             <option value="" hidden selected>Select Github repository</option>
                             <option value="prolike/copenhagencoaching.dk">CCC</option>
@@ -60,18 +60,20 @@ layout: page
                         </select>
                     </div>
 
-                    <div class="col-lg-12 col-12">
+                    <div class="col-lg-7 col-12">
                         <h4>Issue number <span>*</span></h4>
                         <p>Example: #123</p>
                         <input type="text" name="issueNumber" value="" required>
                     </div>
 
-                    <div class="col-lg-12 col-12">
+                    <div class="col-lg-7 col-12">
                         <h4>Fixed price</h4>
-                        <p>(hh:MM) Default is, that the work will billed as per the estimate on the issue. You only
-                            need to use this optional field if you want to override that default (e.g. to indicate that
-                            it is free of charge)
-                        </p>
+                        <div>
+                            <p>(hh:MM) Default is, that the work will billed as per the estimate on the issue. You only
+                                need to use this optional field if you want to override that default (e.g. to indicate that
+                                it is free of charge)
+                            </p>
+                        </div>
                         <input type="time" name="fixedPrice" value="">
                     </div>
 
@@ -81,10 +83,10 @@ layout: page
                 </div>
             </div>
 
-            <div class="col-lg-7 col-12" id="timereg_form_part2b">
-                <div id="notRelatedToGithubIssue">
+            <div class="col-12" id="timereg_form_part2b">
+                <div id="notRelatedToGithubIssue" class="row justify-content-center">
 
-                    <div class="col-lg-12 col-12">
+                    <div class="col-lg-7 col-12">
                         <h4>Category <span>*</span></h4>
                         <p>Select from the list</p>
                         <select class="dropdown" name="category" required>
@@ -101,7 +103,7 @@ layout: page
                         </select>
                     </div>
 
-                    <div class="col-lg-12 col-12">
+                    <div class="col-lg-7 col-12">
                         <h4>Describe the issue <span>*</span></h4>
                         <p>Short explanation of what the issue is about</p>
                         <input type="text" name="issueDescription" value="" required>
