--- a/_layouts/dd-worklog.html
+++ b/_layouts/dd-worklog.html
@@ -6,11 +6,13 @@ layout: page
     <div class="row justify-content-center">
 
         <div class="col-lg-7 col-12">
-            <h1>Dilly Dally Time logging</h1>
+            <h1>Dilly Dally <br>Change Worklog</h1>
         </div>
 
         <div class="col-lg-7 col-12">
-            <a href="/dd-worklog" data-proofer-ignore>Change a Dilly Dally Worklog</a>
+            <h4>Worklog ID<span>*</span></h4>
+            <p>ID</p>
+            <input type="text" id="doc_id" value="" required>
         </div>
 
         <form id="timereg_form">
@@ -45,10 +47,10 @@ layout: page
                 </div>
             </div>
 
-            <div class="col-12" id="timereg_form_part2a">
-                <div id="relatedToGithubIssue" class="row justify-content-center">
+            <div class="col-lg-7 col-12" id="timereg_form_part2a">
+                <div id="relatedToGithubIssue">
 
-                    <div class="col-lg-7 col-12">
+                    <div class="col-lg-12 col-12">
                         <select name="githubRepo" required>
                             <option value="" hidden selected>Select Github repository</option>
                             <option value="prolike/copenhagencoaching.dk">CCC</option>
@@ -64,21 +66,18 @@ layout: page
                         </select>
                     </div>
 
-                    <div class="col-lg-7 col-12">
+                    <div class="col-lg-12 col-12">
                         <h4>Issue number <span>*</span></h4>
                         <p>Example: #123</p>
                         <input type="text" name="issueNumber" value="" required>
                     </div>
 
-                    <div class="col-lg-7 col-12">
+                    <div class="col-lg-12 col-12">
                         <h4>Fixed price</h4>
-                        <div>
-                            <p>(hh:MM) Default is, that the work will billed as per the estimate on the issue. You only
-                                need to use this optional field if you want to override that default (e.g. to indicate
-                                that
-                                it is free of charge)
-                            </p>
-                        </div>
+                        <p>(hh:MM) Default is, that the work will billed as per the estimate on the issue. You only
+                            need to use this optional field if you want to override that default (e.g. to indicate that
+                            it is free of charge)
+                        </p>
                         <input type="time" name="fixedPrice" value="">
                     </div>
 
@@ -88,10 +87,10 @@ layout: page
                 </div>
             </div>
 
-            <div class="col-12" id="timereg_form_part2b">
-                <div id="notRelatedToGithubIssue" class="row justify-content-center">
+            <div class="col-lg-7 col-12" id="timereg_form_part2b">
+                <div id="notRelatedToGithubIssue">
 
-                    <div class="col-lg-7 col-12">
+                    <div class="col-lg-12 col-12">
                         <h4>Category <span>*</span></h4>
                         <p>Select from the list</p>
                         <select class="dropdown" name="category" required>
@@ -108,7 +107,7 @@ layout: page
                         </select>
                     </div>
 
-                    <div class="col-lg-7 col-12">
+                    <div class="col-lg-12 col-12">
                         <h4>Describe the issue <span>*</span></h4>
                         <p>Short explanation of what the issue is about</p>
                         <input type="text" name="issueDescription" value="" required>
@@ -122,6 +121,6 @@ layout: page
         </form>
     </div>
 </div>
-<script src="/js/dillyDally.js"></script>
+<script src="/js/dd-worklog.js"></script>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/3.0.0/fetch.js"></script>
