--- a/_sass/pages/_dillyDally.scss
+++ b/_sass/pages/_dillyDally.scss
@@ -8,8 +8,8 @@
     }
 
     .row {
-        margin-left: 0;
-        margin-right: 0;
+        margin: auto;
+        width: 50%;
     }
 
     h1,
